@@ -2,4 +2,4 @@
                                                                      
                                                                      
                                              
-/* Style Sheet: Scintilla.ess * Author: squeakypants */ default_style { fore:#000000; back:#FFFFFF; face:%(primary)s; size:%(size)d; } number2_style { fore:#007F7F; } stringeol_style { back:#E0C0E0; face:Courier New; } caret_line { back:D8F8FF; } comment_style { fore:#007F00; } keyword_style { fore:#00007F; size:%(size)d bold; } keyword3_style { fore:#007F7F; size:%(size)d bold; } guide_style { fore:#838383; } keyword4_style { fore:#00007F; size:%(size)d bold; } ideol_style { fore:#E0C0E0; face:%(secondary)s; } array_style { fore:#EE8B02 bold; face:%(secondary)s; } global_style { fore:#007F7F bold; face:%(secondary)s; } line_num { back:#C0C0C0; face:Verdana; size:%(size3)d; } pre2_style { fore:#AB39F2 bold; } string_style { fore:#7F007F; face:Courier New; } class_style { fore:#0000FF; size:%(size)d bold; } error_style { fore:#DD0101 bold; face:%(secondary)s; } marker_style { fore:#FFFFFF; back:#000000; } keyword2_style { fore:#00007F; size:%(size)d bold; } class2_style { fore:#2E8B57 bold; } unknown_style { fore:#FFFFFF bold; back:#DD0101 eol; } btick_style { fore:#8959F6 bold; } scalar_style { fore:#AB37F2 bold; face:%(secondary)s; } operator_style { size:%(size)d bold; } here_style { fore:#CA61CA bold; face:%(secondary)s; } number_style { fore:#007F7F; } regex_style { fore:#008B8B; } whitespace_style { fore:#808080; } decor_style { fore:#805000; } scalar2_style { fore:#AB37F2; face:%(secondary)s; } funct_style { fore:#008B8B italic; } brace_good { fore:#0000FF; back:#FFFFFF bold; } pre_style { fore:#AB39F2 bold; } directive_style { fore:#0000FF bold; face:%(secondary)s; } calltip { fore:#404040; back:#FFFFB8; } char_style { fore:#7F007F; face:Courier New; } brace_bad { fore:#FF0000; back:#FFFFFF bold; } dockey_style { fore:#0000FF; } 
+/* Style Sheet: Scintilla.ess * Author: squeakypants */ default_style { fore:#000000; back:#FFFFFF; face:%(primary)s; size:%(size)d; } number2_style { fore:#007F7F; } stringeol_style { back:#E0C0E0; face:Courier New; } caret_line { back:D8F8FF; } comment_style { fore:#007F00; } keyword_style { fore:#00007F; size:%(size)d bold; } keyword3_style { fore:#007F7F; size:%(size)d bold; } guide_style { fore:#838383; } keyword4_style { fore:#00007F; size:%(size)d bold; } ideol_style { fore:#E0C0E0; face:%(secondary)s; } array_style { fore:#EE8B02 bold; face:%(secondary)s; } global_style { fore:#007F7F bold; face:%(secondary)s; } line_num { back:#C0C0C0; face:Verdana; size:%(size3)d; } pre2_style { fore:#AB39F2 bold; } string_style { fore:#7F007F; face:Courier New; } class_style { fore:#0000FF; size:%(size)d bold; } error_style { fore:#DD0101 bold; face:%(secondary)s; } marker_style { fore:#FFFFFF; back:#000000; } keyword2_style { fore:#00007F; size:%(size)d bold; } class2_style { fore:#2E8B57 bold; } unknown_style { fore:#FFFFFF bold; back:#DD0101 eol; } btick_style { fore:#8959F6 bold; } scalar_style { fore:#AB37F2 bold; face:%(secondary)s; } operator_style { size:%(size)d bold; } here_style { fore:#CA61CA bold; face:%(secondary)s; } number_style { fore:#007F7F; } regex_style { fore:#008B8B; } decor_style { fore:#805000; } scalar2_style { fore:#AB37F2; face:%(secondary)s; } funct_style { fore:#008B8B italic; } brace_good { fore:#0000FF; back:#FFFFFF bold; } pre_style { fore:#AB39F2 bold; } directive_style { fore:#0000FF bold; face:%(secondary)s; } calltip { fore:#404040; back:#FFFFB8; } char_style { fore:#7F007F; face:Courier New; } brace_bad { fore:#FF0000; back:#FFFFFF bold; } dockey_style { fore:#0000FF; } 
